--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
     "sass": "^1.55.0",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
