--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
     "sass": "^1.55.0",
+    "swiper": "^8.4.2",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5",
