--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "swiper": "^8.4.2",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.37",
+    "vue-loading-skeleton": "^2.0.0-beta.1",
     "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
