--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "vue": "^3.2.37",
     "vue-loading-skeleton": "^2.0.0-beta.1",
     "vue-router": "^4.1.5",
+    "vuetify": "^3.0.0-beta.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@mdi/font": "^7.0.96",
     "@vitejs/plugin-vue": "^3.1.0",
     "vite": "^3.1.0"
   }
