--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "lodash": "^4.17.21",
     "sass": "^1.55.0",
     "swiper": "^8.4.2",
     "vite-svg-loader": "^3.6.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.0.96",
+    "@types/lodash": "^4.14.186",
     "@vitejs/plugin-vue": "^3.1.0",
     "vite": "^3.1.0"
   }
