--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.8.0",
+    "axios": "^1.1.3",
+    "firebase": "^9.12.1",
     "lodash": "^4.17.21",
     "sass": "^1.55.0",
     "swiper": "^8.4.2",
