--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.0.96",
+    "@stripe/stripe-js": "^1.21.1",
     "@types/lodash": "^4.14.186",
     "@vitejs/plugin-vue": "^3.1.0",
     "vite": "^3.1.0"
